--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -8,6 +8,7 @@
                 <hr>
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
+                <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
@@ -35,6 +36,7 @@
     <script>
     let brokerBtn = document.getElementById("brokerBtn");
     let authBrokerBtn = document.getElementById("authBrokerBtn");
+    let logBtn = document.getElementById("logBtn");
     
     let output = document.getElementById("output");
     let sent = document.getElementById("payload");
@@ -84,6 +86,38 @@
             received.innerHTML = JSON.stringify(data,undefined, 4);
             if (data.error) {
                 console.log(data.message);
+            }else{
+                output.innerHTML += "Response from broker: " + data.message;
+            }
+        })
+        .catch((error) => console.log(error));
+    })
+
+    logBtn.addEventListener("click", function(){
+        const payload = {
+            action: 'log',
+            log: {
+                name: "event",
+                data: "some kind of data"
+            }
+        };
+
+        const headers = new Headers();
+        headers.append("Content-Type","application/json");
+
+        const body = {
+            method: "POST",
+            body: JSON.stringify(payload),
+            headers: headers
+        };
+
+        fetch("http:\/\/localhost:8081/handle",body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML = JSON.stringify(payload, undefined, 4);
+            received.innerHTML = JSON.stringify(data,undefined, 4);
+            if (data.error) {
+                output.innerHTML += "Error: " + data.message;
             }else{
                 output.innerHTML += "Response from broker: " + data.message;
             }
