--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -9,6 +9,7 @@
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
                 <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log</a>
+                <a id="mailBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Mail</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
@@ -37,6 +38,7 @@
     let brokerBtn = document.getElementById("brokerBtn");
     let authBrokerBtn = document.getElementById("authBrokerBtn");
     let logBtn = document.getElementById("logBtn");
+    let mailBtn = document.getElementById("mailBtn");
     
     let output = document.getElementById("output");
     let sent = document.getElementById("payload");
@@ -99,6 +101,40 @@
             log: {
                 name: "event",
                 data: "some kind of data"
+            }
+        };
+
+        const headers = new Headers();
+        headers.append("Content-Type","application/json");
+
+        const body = {
+            method: "POST",
+            body: JSON.stringify(payload),
+            headers: headers
+        };
+
+        fetch("http:\/\/localhost:8081/handle",body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML = JSON.stringify(payload, undefined, 4);
+            received.innerHTML = JSON.stringify(data,undefined, 4);
+            if (data.error) {
+                output.innerHTML += "Error: " + data.message;
+            }else{
+                output.innerHTML += "Response from broker: " + data.message;
+            }
+        })
+        .catch((error) => console.log(error));
+    })
+
+    mailBtn.addEventListener("click", function(){
+        const payload = {
+            action: 'mail',
+            mail: {
+                from: "me@example.com",
+                to: "you@example.com",
+                subject: "Email test",
+                message: "Hello World!"
             }
         };
 
