--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -9,6 +9,7 @@
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
                 <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log</a>
+                <a id="logGRPCBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log with gRPC</a>
                 <a id="mailBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Mail</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
@@ -38,6 +39,7 @@
     let brokerBtn = document.getElementById("brokerBtn");
     let authBrokerBtn = document.getElementById("authBrokerBtn");
     let logBtn = document.getElementById("logBtn");
+    let logGRPCBtn = document.getElementById("logGRPCBtn");
     let mailBtn = document.getElementById("mailBtn");
     
     let output = document.getElementById("output");
@@ -148,6 +150,38 @@
         };
 
         fetch("http:\/\/localhost:8081/handle",body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML = JSON.stringify(payload, undefined, 4);
+            received.innerHTML = JSON.stringify(data,undefined, 4);
+            if (data.error) {
+                output.innerHTML += "<p>Error: " + data.message + "</p>";
+            }else{
+                output.innerHTML += "<p>Response from broker: " + data.message + "</p>";
+            }
+        })
+        .catch((error) => console.log(error));
+    })
+
+    logGRPCBtn.addEventListener("click", function(){
+        const payload = {
+            action: 'log',
+            log: {
+                name: "log ",
+                data: "gRPC log data goes here"
+            }
+        };
+
+        const headers = new Headers();
+        headers.append("Content-Type","application/json");
+
+        const body = {
+            method: "POST",
+            body: JSON.stringify(payload),
+            headers: headers
+        };
+
+        fetch("http:\/\/localhost:8081/log-grpc",body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML = JSON.stringify(payload, undefined, 4);
