--- a/front-end/cmd/web/templates/footer.partial.gohtml
+++ b/front-end/cmd/web/templates/footer.partial.gohtml
@@ -3,6 +3,12 @@
         <div class="row">
             <div class="col text-center">
                 <hr>
+                <small class="text-muted">Build: {{ index . "Commit" }}</small>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                <hr>
                 <small class="text-muted">Copyright &copy; GoCode.ca</small>
             </div>
         </div>
