--- a/front-end/cmd/web/templates/footer.partial.gohtml
+++ b/front-end/cmd/web/templates/footer.partial.gohtml
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col text-center">
                 <hr>
-                <small class="text-muted">Build: {{ index . "Commit" }}</small>
+                <small class="text-muted">Build: {{ index . "COMMIT" }}</small>
             </div>
         </div>
         <div class="row">
