--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -5,13 +5,31 @@
         <div class="row">
             <div class="col">
                 <h1 class="mt-5">Test microservices</h1>
-                <hr>
-                <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
-                <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
-                <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log</a>
-                <a id="logGRPCBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log with gRPC</a>
-                <a id="mailBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Mail</a>
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Authenticate</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Send log</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Send mail</button>
+                    </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                        <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
+                    </div>
+                    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                        <a id="logGRPCBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log with gRPC</a>
+                    </div>
+                    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                         <a id="mailBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Mail</a>
 
+                    </div>
+                </div>
+                <hr>
+                
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
                 </div>
@@ -36,9 +54,8 @@
 
 {{define "js"}}
     <script>
-    let brokerBtn = document.getElementById("brokerBtn");
+
     let authBrokerBtn = document.getElementById("authBrokerBtn");
-    let logBtn = document.getElementById("logBtn");
     let logGRPCBtn = document.getElementById("logGRPCBtn");
     let mailBtn = document.getElementById("mailBtn");
     
@@ -64,70 +81,21 @@
             headers: headers
         };
 
-        fetch({{ index . "Address" }} + "/handle",body)
+        fetch({{ index . "BACKEND_ADDRESS" }} + "/authenticate",body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML = JSON.stringify(payload, undefined, 4);
             received.innerHTML = JSON.stringify(data,undefined, 4);
             if (data.error) {
-                output.innerHTML += "<p>Error: " + data.message + "</p>";
+                output.innerHTML = "<p>Timestamp: " + Date.now() + "<br />Error: " + data.message + "</p>";
             }else{
-                output.innerHTML += "<p>Response from broker: " + data.message + "</p>";
+                output.innerHTML = "<p>Timestamp: " + Date.now() + "<br />Response from broker: " + data.message + "</p>";
+                // Set token here!
             }
         })
         .catch((error) => console.log(error));
     })
 
-    brokerBtn.addEventListener("click", function(){
-        const body = {
-            method: 'POST',
-        }
-    
-        fetch({{ index . "Address" }},body)
-        .then((response) => response.json())
-        .then((data) => {
-            sent.innerHTML ="empty post request";
-            received.innerHTML = JSON.stringify(data,undefined, 4);
-            if (data.error) {
-                console.log(data.message);
-            }else{
-                output.innerHTML += "<p>Response from broker: " + data.message + "</p>";
-            }
-        })
-        .catch((error) => console.log(error));
-    })
-
-    logBtn.addEventListener("click", function(){
-        const payload = {
-            action: 'log',
-            log: {
-                name: "log ",
-                data: "Log data goes here"
-            }
-        };
-
-        const headers = new Headers();
-        headers.append("Content-Type","application/json");
-
-        const body = {
-            method: "POST",
-            body: JSON.stringify(payload),
-            headers: headers
-        };
-
-        fetch({{ index . "Address" }} + "/handle",body)
-        .then((response) => response.json())
-        .then((data) => {
-            sent.innerHTML = JSON.stringify(payload, undefined, 4);
-            received.innerHTML = JSON.stringify(data,undefined, 4);
-            if (data.error) {
-                output.innerHTML += "<p>Error: " + data.message + "</p>";
-            }else{
-                output.innerHTML += "<p>Response from broker: " + data.message + "</p>";
-            }
-        })
-        .catch((error) => console.log(error));
-    })
 
     mailBtn.addEventListener("click", function(){
         const payload = {
@@ -149,15 +117,15 @@
             headers: headers
         };
 
-        fetch({{ index . "Address" }} + "/handle",body)
+        fetch({{ index . "BACKEND_ADDRESS" }} + "/mail",body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML = JSON.stringify(payload, undefined, 4);
             received.innerHTML = JSON.stringify(data,undefined, 4);
             if (data.error) {
-                output.innerHTML += "<p>Error: " + data.message + "</p>";
+                output.innerHTML = "<p>Timestamp: " + Date.now() + "<br />Error: " + data.message + "</p>";
             }else{
-                output.innerHTML += "<p>Response from broker: " + data.message + "</p>";
+                output.innerHTML = "<p>Timestamp: " + Date.now() + "<br />Response from broker: " + data.message + "</p>";
             }
         })
         .catch((error) => console.log(error));
@@ -181,15 +149,15 @@
             headers: headers
         };
 
-        fetch({{ index . "Address" }} + "/log-grpc",body)
+        fetch({{ index . "BACKEND_ADDRESS" }} + "/log",body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML = JSON.stringify(payload, undefined, 4);
             received.innerHTML = JSON.stringify(data,undefined, 4);
             if (data.error) {
-                output.innerHTML += "<p>Error: " + data.message + "</p>";
+                output.innerHTML = "<p>Timestamp: " + Date.now() + "<br />Error: " + data.message + "</p>";
             }else{
-                output.innerHTML += "<p>Response from broker: " + data.message + "</p>";
+                output.innerHTML = "<p>Timestamp: " + Date.now() + "<br />Response from broker: " + data.message + "</p>";
             }
         })
         .catch((error) => console.log(error));
