Refactor logger service with AMQP

--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -22,11 +22,11 @@
                             <h2>Authentication form</h2>
                             <div class="mb-3">
                                 <label for="authEmail" class="form-label">Email address</label>
-                                <input id="authEmail" class="form-control" type="email" placeholder="admin@example.com" />
+                                <input id="authEmail" class="form-control" type="email" value="admin@example.com" placeholder="admin@example.com" />
                             </div>
                             <div class="mb-3">
                                 <label for="authPassword" class="form-label">Email address</label>
-                                <input id="authPassword"  class="form-control" type="password" placeholder="verysecret" />
+                                <input id="authPassword"  class="form-control" type="password" value="verysecret" placeholder="verysecret" />
                             </div>
                             
                             <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
